# copter_control_ifs

./: .gitignore  readme.md  test.launch
src/minimumsnap_route/: CMakeLists.txt  package.xml
src/minimumsnap_route/src/: planner_srv.py  test.py  twww.py
src/minimumsnap_route/srv/: service.srv
src/rcc/: CMakeLists.txt  Doxyfile  package.xml
src/rcc/html/: annotated.html  annotated_dup.js  base_method_8cpp.html  base_method_8cpp__incl.map  base_method_8cpp__incl.md5  base_method_8cpp_source.html  cfg_8cpp.html  cfg_8cpp__incl.map  cfg_8cpp__incl.md5  cfg_8cpp_source.html  class_c_a_l_c___t_i_m_e___l_o_g-members.html  class_c_a_l_c___t_i_m_e___l_o_g.html  class_c_a_l_c___t_i_m_e___l_o_g.js  class_c_a_l_c___t_i_m_e___l_o_g__coll__graph.map  class_c_a_l_c___t_i_m_e___l_o_g__coll__graph.md5  class_c_a_l_c___t_i_m_e___l_o_g__inherit__graph.md5  class_l_o_g-members.html  class_l_o_g.html  class_l_o_g.js  class_l_o_g__inherit__graph.map  class_l_o_g__inherit__graph.md5  classes.html  dir_0af1587c8378955de40f48b4bd1869f0.html  dir_0af1587c8378955de40f48b4bd1869f0.js  dir_262a669a5763493b9e20a8b73dacc525.html  dir_262a669a5763493b9e20a8b73dacc525.js  dir_2715f821395693aca03e1bfa75996950.html  dir_2715f821395693aca03e1bfa75996950.js  dir_3025203a86a6b7ba9d8f7249a73ee0a4.html  dir_3025203a86a6b7ba9d8f7249a73ee0a4.js  dir_391513bbec656ad0f0b1433a02685683.html  dir_391513bbec656ad0f0b1433a02685683.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8d97d736466c0c636acd974f1a4344f3.html  dir_8d97d736466c0c636acd974f1a4344f3.js  dir_919653a6098570dc99a63e645d1b29db.html  dir_919653a6098570dc99a63e645d1b29db.js  dir_c3048dd5a1c0fecddeac7d66c17f7aec.html  dir_c3048dd5a1c0fecddeac7d66c17f7aec.js  (+89 more)
src/rcc/include/: baseMethod.h  baseType.h  cfg.h  lidar_data_process.h  mavlink_interface.h  occupied_map.h  route_tinker.h  route_tracker.h  rviz_visualize.h  uavcontrol_interface.h  wp_manager.h
src/rcc/latex/: annotated.tex  base_method_8cpp.tex  base_method_8cpp__incl.md5  cfg_8cpp.tex  cfg_8cpp__incl.md5  class_c_a_l_c___t_i_m_e___l_o_g.tex  class_c_a_l_c___t_i_m_e___l_o_g__coll__graph.md5  class_c_a_l_c___t_i_m_e___l_o_g__inherit__graph.md5  class_l_o_g.tex  class_l_o_g__inherit__graph.md5  dir_0af1587c8378955de40f48b4bd1869f0.tex  files.tex  hierarchy.tex  (+37 more)
(+107 files in other folders)
